--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.3.0",
+    "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-chartjs-2": "^5.2.0",
@@ -42,6 +43,9 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.26",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   }
 }
